--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -29,12 +33,21 @@ body {
   font-style: italic;
 }
 
+.left-side {
+  display: flex;
+}
+
+.right-side {
+  display: flex;
+}
+
 button {
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-right: 16px;
 }
 
 a {
@@ -45,4 +58,9 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+ul li {
+  display: inline;
+  margin: 16px;
 }
