--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,14 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   height: 100vh;
-  margin: 0;
+  display: flex;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  flex-direction: column;
 }
 
 img {
   width: 600px;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 button {
@@ -16,6 +25,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  margin: 0px 5px;
 }
 
 input {
@@ -23,5 +34,57 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px; 
+}
+
+ul li {
+  display: inline;
+  margin: 7px;
+  opacity: 0.7;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  margin: 10px;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.input {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.buttons {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #eee;
+  height: 10vh;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
