--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -29,6 +29,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 32px;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
@@ -66,13 +68,14 @@ a {
   box-sizing: border-box;
   padding: 16px;
   flex-shrink: 0;
+  float: left;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  padding: 16px;
+  padding: 20px;
   margin: 16px;
   width: 300px;
 }
