--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 20fr 1fr;
+  gap: 5px;
 }
 
 .container div {
@@ -17,15 +21,24 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+  display: inline;
+  margin: 30px;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2 / 4;
+  height: 795px;
 }
 
 .sidebar .photo {
@@ -33,7 +46,12 @@
   color: black;
   font-size: 12px;
   font-weight: normal;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-bottom: 35px;
   border-radius: 10px;
+  height: 140px;
 }
 
 
@@ -42,19 +60,38 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-bottom: 35px;
+  height: 140px;
 }
 
 .nav {
   background-color: #C50208;
+  height: 40px;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
+  display: inline;
+  margin: 100px;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 10px;
+  height: 720px;
+}
+
+.card .title {
+  margin-top: 5px;
+  font-weight: 600;
 }
 
 .article p {
@@ -62,6 +99,7 @@
   font-family: sans-serif;
   color: white;
   text-align: left;
+  padding: 5px;
 }
 
 .article .card {
@@ -83,9 +121,12 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  height: 30px;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+  margin-top: 12px;
 }
